--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.2"
   },
-  "author": "Your Name",
+  "author": "HardCode275",
   "license": "MIT"
 }
