--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "decentralized-transaction-app",
   "version": "1.0.0",
   "description": "A decentralized application for swapping Bitcoin and Monero transactions.",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "node dist/app.js",
     "build": "tsc",
     "test": "echo \"No tests specified\" && exit 0"
   },
