--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.2"
   },
