--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-retry": "^4.5.0",
+    "body-parser": "^1.20.2",
     "express": "^4.17.1",
     "monero-javascript": "^0.8.4",
-    "typescript": "^4.1.2",
-    "body-parser": "^1.20.2"
-    
-
+    "qrcode": "^1.5.4",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^14.18.63",
+    "@types/qrcode": "^1.5.5",
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.2"
   },
