--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "axios-retry": "^4.5.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.7",
     "express": "^4.17.1",
     "monero-javascript": "^0.8.4",
     "qrcode": "^1.5.4",
